Added profile card

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,121 @@
-html {
-    height: 100%
+* {
+    box-sizing: border-box;
 }
+
 body {
-    background: url(/img/background.png) no-repeat center center;
+    background-image: url("/img/background.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
+    background-color: #ffffff;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+.wrapper {
+    width: 32rem;
+    background-color: rgba(245, 245, 245, 0.8);
+    border-radius: 10px;
+    box-shadow: 0 3px 30px rgba(235, 220, 220, 0.2);
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%); /* IE 9 */
+    -webkit-transform: translate(-50%, -50%); /* Chrome, Safari, Opera */
+    -webkit-animation: fadein 1.5s;
+    animation: fadein 1.5s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.wrapper .card {
+    padding: 10px 40px;
+}
+
+.wrapper .card .profile .name {
+    color: rgba(42, 42, 42, 0.7);
+    font-size: 3em;
+    font-weight: 300;
+    line-height: 1.5;
+    letter-spacing: -0.075rem;
+    text-transform: lowercase;
+
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+
+.wrapper .card .profile .desc {
+    color: rgba(42, 42, 42, 0.6);
+    font-size: 1.3em;
+    font-weight: 350;
+    line-height: 1.5;
+    letter-spacing: -0.025rem;
+    text-transform: lowercase;
+
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.wrapper .card .profile .desc p{
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+}
+
+.wrapper .card .profile:after {
+    width: 100%;
+    height: 1px;
+    content: ' ';
+    display: block;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    background: rgba(42, 42, 42, 0.1);
+}
+
+.wrapper .card .social {
+    display: flex;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    margin-left:3em;
+    margin-right: 3em;
+    justify-content: space-between;
+}
+
+.wrapper .card .social .icon {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.wrapper .card .social .icon a {
+    background-color: rgba(40, 40, 43, 0.1);
+    color: rgba(40, 40, 43, 0.6);
+    width: 2em;
+    height: 2em;
+    font-size: 1.5em;
+    line-height: 2em;
+    text-align: center;
+    border-radius: 30px;
+    -webkit-transition: background 0.3s ease-in;
+    transition: background 0.3s ease-in;
+}
+
+.wrapper .card .social .icon a:hover {
+    background-color: rgba(40, 40, 43, 0.3);
+}
+
+
+@media screen and (max-width: 575px) {
+    .wrapper {
+        width: 96%;
+    }
+
+    .wrapper .card {
+        padding: 10px;
+    }
 }
